Mon Oct 31 00:50:00 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: check -fno-omit-frame-pointer acceptance and usage
	  under MinGW. [ruby-core:39957] [Bug #5407]

Mon Oct 31 00:16:11 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_cloexec_fcntl_dupfd): declared.

	* io.c (rb_cloexec_fcntl_dupfd): new function.
	  (nogvl_io_cntl): use rb_cloexec_fcntl_dupfd.

	* process.c (move_fds_to_avoid_crash): use rb_cloexec_fcntl_dupfd.

Sun Oct 30 22:46:46 2011  Tanaka Akira  <akr@fsij.org>

	* configure.in: check pipe2.

	* io.c (rb_cloexec_pipe): use pipe2 if available.

Sun Oct 30 22:32:44 2011  Tanaka Akira  <akr@fsij.org>

	* ruby.c (fill_standard_fds): use fstat() instead of fcntl(F_GETFD)
	  for MinGW.  reported by Luis Lavena.  [ruby-core:40526] [Bug #5516]

Sun Oct 30 21:12:47 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_cloexec_pipe): declared.

	* io.c (rb_cloexec_pipe): new function.
	  (rb_pipe): use rb_cloexec_pipe.

	* thread_pthread.c (rb_thread_create_timer_thread): use
	  rb_cloexec_pipe.

Sun Oct 30 20:06:07 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_cloexec_dup): refine control flow.
	  (rb_cloexec_dup2): ditto.

Sun Oct 30 18:45:50 2011  Tanaka Akira  <akr@fsij.org>

	* ruby.c (fill_standard_fds): new function to open closed standard
	  file descriptors.
	  (ruby_sysinit): call fill_standard_fds.

Sun Oct 30 10:50:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (install_recursive, bin-comm): split mere
	  string not path name.  [ruby-core:40462] [Bug #5492]

Sun Oct 30 10:47:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_cloexec_dup, rb_cloexec_dup2): CLOEXEC has been set if
	  dup3 succeeded.

Sun Oct 30 09:58:48 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_cloexec_dup): don't allocate standard file descriptors.

Sun Oct 30 08:29:51 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_cloexec_dup2): don't set CLOEXEC for standard file
	  descriptors.
